# rs_system_pipeline

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
data_quality/: DATA_QUALITY_REPORT.md  README.md  analyze_historical_data.py  analyze_mapping_opportunities.py  analyze_olympic_projects.py  analyze_pension_project.py  analyze_rs_conversion_gap.py  budget_continuity_validation.md  check_totals.py  column_matrix_report.md  create_column_matrix.py  expenditure_summary.py  generate_quality_report.py  historical_data_analysis_report.md  mapping_opportunities.md  summary_report.py  validate_budget_continuity.py
data_quality/archives/: PRESERVE_LONG_VOWEL_WORDS.py  PRESERVE_LONG_VOWEL_WORDS.txt  PRESERVE_LONG_VOWEL_WORDS_ALL_YEARS.py  PRESERVE_LONG_VOWEL_WORDS_ALL_YEARS.txt  PRESERVE_LONG_VOWEL_WORDS_EXTENDED.txt
data_quality/investigations/: analyze_all_years_longvowel.py  check_missing_longvowel_words.py  export_all_longvowel_words_csv.py  generate_preserve_words_list.py  identify_words_to_restore_longvowel.py  investigate_diet_member_budget.py  investigate_hyphen_longvowel_mixture.py  investigate_raw_hyphen_misuse.py  test_neologdn_behavior.py  test_our_normalization.py  verify_hyphen_to_longvowel_fix.py
data_quality/reports/: all_years_longvowel_analysis.md  column_matrix_report.md  csv_export_summary.md  diet_member_budget_investigation.md  historical_data_analysis_report.md  (+22 more)
docs/: DATA_STRUCTURE.md
scripts/: activate.sh  normalize_rs2024.py  setup_env.sh
src/: __init__.py
(+8 files in other folders)
